# pytest-tagging

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: bumpversion.yml  publish.yml  python-app.yml  tests.yml
pytest_tagging/: __init__.py  choices.py  plugin.py  selector.py  utils.py
tests/: test_plugin.py  test_utils.py  utils.py
