[tool.poetry]
name = "pytest_tagging"
version = "0.1.0"
description = "a pytest plugin to tag tests"
authors = ["Sergio Castillo <s.cast.lara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
pytest-parallel = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.pytest11]
pytest_tagging = "pytest_tagging.plugin"
